// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ellipse 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g multiple selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g single selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly image 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Replace With..."
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Replace With...
      </button>
    </div>
    <div
      className="btn-container half"
      key="Trace"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Trace
      </button>
    </div>
    <div
      className="btn-container half"
      key="Grading"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Grading
      </button>
    </div>
    <div
      className="btn-container half"
      key="Sharpen"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Sharpen
      </button>
    </div>
    <div
      className="btn-container half"
      key="Crop"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Crop
      </button>
    </div>
    <div
      className="btn-container half"
      key="Bevel"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Bevel
      </button>
    </div>
    <div
      className="btn-container half"
      key="Invert"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Invert
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly line 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  />
</div>
`;

exports[`should render correctly path 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      />
    </div>
    <div
      className="btn-container full"
      key="Decompose"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Decompose
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly use 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Disassemble"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Disassemble
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        type="button"
      >
        Array
      </button>
    </div>
  </div>
</div>
`;
